--- a/QNotepadDemo/mainwindow.ui
+++ b/QNotepadDemo/mainwindow.ui
@@ -38,6 +38,8 @@
     <addaction name="separator"/>
     <addaction name="actionSave"/>
     <addaction name="actionSave_as"/>
+    <addaction name="separator"/>
+    <addaction name="actionPrint"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
@@ -49,6 +51,11 @@
     <addaction name="separator"/>
     <addaction name="actionRedo"/>
     <addaction name="actionUndo"/>
+    <addaction name="separator"/>
+    <addaction name="actionFont"/>
+    <addaction name="actionColor"/>
+    <addaction name="actionText_Background_Color"/>
+    <addaction name="actionPalette_color"/>
    </widget>
    <widget class="QMenu" name="menuAbout">
     <property name="title">
@@ -177,6 +184,31 @@
    </property>
    <property name="shortcutContext">
     <enum>Qt::WidgetShortcut</enum>
+   </property>
+  </action>
+  <action name="actionFont">
+   <property name="text">
+    <string>Font</string>
+   </property>
+  </action>
+  <action name="actionColor">
+   <property name="text">
+    <string>Color</string>
+   </property>
+  </action>
+  <action name="actionText_Background_Color">
+   <property name="text">
+    <string>Text Background Color</string>
+   </property>
+  </action>
+  <action name="actionPalette_color">
+   <property name="text">
+    <string>Palette color</string>
+   </property>
+  </action>
+  <action name="actionPrint">
+   <property name="text">
+    <string>Print</string>
    </property>
   </action>
  </widget>
